# python-automated-testing

./: LICENSE  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/hello/: hello_world.py
tests/: test_hello.py
