[metadata]
name = hello
description = say hello world
author = Nhat Tran
license = MIT
license_file = LICENSE
platforms = unix, linux, osx

[options]
packages = hello
install_requires = requests>=2
python_requires >= 3.10
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
hello = py.typed

[flake8]
max-line-length = 160
